DB設計の変更による修正
